--- a/Projeto 04 - Agenda de Contatos/pubspec.yaml
+++ b/Projeto 04 - Agenda de Contatos/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   firebase_core: ^0.5.0+1
   cloud_firestore: ^0.14.1+3
+  image_picker:
+  firebase_storage:
 
 
   # The following adds the Cupertino Icons font to your application.
